<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        app:titleTextColor="@color/onPrimaryColor"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        android:titleTextColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:title="MuseumSearch" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="8dp"
        android:padding="15dp"
        android:fontFamily="serif"
        android:text="@string/landing_title"
        android:textAlignment="center"
        android:textColor="@color/surfaceColor"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/landingSearchView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />


    <LinearLayout
        android:id="@+id/landingSearchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/mainSearchView"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:elevation="10dp"
            android:background="@color/onSecondaryColor"
            android:queryHint="Search artworks, artists, or keywords" />

        <ImageButton
            android:id="@+id/openFilterButton"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:elevation="10dp"
            android:background="@color/onSecondaryColor"
            android:contentDescription="@string/search_filter"
            android:padding="10dp"
            android:src="@drawable/filter_small"
            />
    </LinearLayout>

    <Button
        android:id="@+id/openResultButton"
        android:layout_width="235dp"
        android:layout_height="64dp"
        android:layout_marginTop="90dp"
        android:text="@string/landing_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landingSearchView" />

</androidx.constraintlayout.widget.ConstraintLayout>